# ros4mat

./: FirstSteps.md  Installation.md  MultiUser.md  ProjectHome.md  README.txt  SensorsReference.md  SerialPort.md  convention_ROS.txt  exchangeStructs.h
examples/: Demo1.m  Demo2.m  Demo3.m  Demo4.m  Demo5.m  TakeASnapShot.m  runLinpack.bash
matlab/: ros4mat.c
ros4mat/: CMakeLists.txt  Logico.launch  mainpage.dox  manifest.xml  ros4mat.launch
ros4mat/msg/: M_ADC.msg  M_Battery.msg  M_Cam.msg  M_Computer.msg  M_GPS.msg  M_IMU.msg  M_Kinect.msg  M_StereoCam.msg
ros4mat/src/: adcClient.cpp  adcDriver.cpp  batClient.cpp  batDriver.cpp  batHelper.cpp  camDriver.cpp  computerInfoDriver.cpp  gpsClient.cpp  gpsDriver.cpp  kinectDriver.cpp  phidgetsClient.cpp  phidgetsDriver.cpp  ros4mat.cpp  serialClient.cpp  serialDriver.cpp  stereoCamDriver.cpp
ros4mat/srv/: S_ADC.srv  S_Battery.srv  S_Cam.srv  S_Computer.srv  S_DigitalOut.srv  S_GPS.srv  S_IMU.srv  S_Kinect.srv  S_Serial.srv  S_StereoCam.srv
